--- a/.github/workflows/runDatagen.yml
+++ b/.github/workflows/runDatagen.yml
@@ -38,5 +38,5 @@ jobs:
       - name: capture build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: generated-${{ steps.ref.outputs.branch }}
+          name: generated
           path: src/main/generated
